# ble-sim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: FindLibdbus.cmake
config/: blesim.conf
example-scripts/: add-device.lua  multiple-devices.lua  register-device.lua  test-device.lua
scripts/: Dockerfile.ble-sim  Jenkinsfile  build.sh  clean-dockerise.sh  dockerise.sh  download-deps.sh  entrypoint.sh  env.sh  run-controller.sh  run-local.sh  setup.sh
src/: advertising.c  advertising.h  characteristic.c  characteristic.h  dbusutils.c  dbusutils.h  defines.h  descriptor.c  descriptor.h  device.c  device.h  logger.c  logger.h  lua_interface.c  lua_interface.h  main.c  server.c  server.h  service.c  service.h  utils.c  utils.h
